--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -45,7 +45,7 @@
 
 <div class="tab-pane">
 
-	<div class="public-comment-panel panel panel-default">
+	<div class="public-comment-panel panel panel-default no-margin">
 		<table ng-table="s.tableParams" show-filter="true" class="eao-comment-table table table-hover">
 			<tr class="comment-row" ng-repeat="o in $data" ng-click="s.detail(o)">
 				<td class="id-col no-mobile" header-class="'id-col no-mobile'" ng-if="authentication.user" data-title="'ID'" sortable="'commentId'">
