--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -15,10 +15,12 @@
 		<!-- TABS -->
 		<ul class="nav nav-tabs" ng-init="form.curTab = 'Project Details'">
 			<li role="presentation" ng-class="{'active':form.curTab === 'Project Details'}" class="form-group" x-show-errors>
-				<a ng-click="form.curTab = 'Project Details'" title="Edit Project Details" name="detailsForm">Project Details</a>
+				<a ng-click="form.curTab = 'Project Details'" title="Edit Project Details" name="detailsForm">
+					<span class="glyphicon glyphicon-exclamation-sign"></span>Project Details</a>
 			</li>
 			<li role="presentation" ng-class="{'active':form.curTab === 'Project Contacts'}" class="form-group" x-show-errors>
-				<a ng-click="form.curTab = 'Project Contacts'" title="Edit Project Contacts" name="contactsForm">Contacts</a>
+				<a ng-click="form.curTab = 'Project Contacts'" title="Edit Project Contacts" name="contactsForm">
+					<span class="glyphicon glyphicon-exclamation-sign"></span>Contacts</a>
 			</li>
 
 			<!--
@@ -40,25 +42,25 @@
 			<fieldset>
 				<legend>General Info</legend>
 				<div class="form-group" x-show-errors>
-					<label class="control-label" for="name">Project Name</label>
+					<label class="control-label" for="name">Project Name<em class="required">(Required)</em></label>
 					<input class="form-control" title="Project Name" id="name" name="projectname"
 						ng-model="project.name" required />
 				</div>
 				<div class="row">
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="type">Type</label>
+						<label class="control-label" for="type">Type<em class="required">(Required)</em></label>
 						<select class="form-control" title="Project Type" id="type" name="type"
 							ng-model="project.type"
 							ng-options="type for type in types" required></select>
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="subtype">Sub-type</label>
+						<label class="control-label" for="subtype">Sub-type<em class="required">(Required)</em></label>
 						<select class="form-control" title="Project Sub-type" id="subtype" name="subtype"
 							ng-model="project.sector"
 							ng-options="subType for subType in subTypes[project.type]" required></select>
 					</div>
 					<div class="col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="build">Nature of Project</label>
+						<label class="control-label" for="build">Nature of Project<em class="required">(Required)</em></label>
 						<select class="form-control" id="build" name="build"
 						 	ng-model="project.build" required>
 							<option value=""></option>
@@ -69,13 +71,13 @@
 					</div>
 				</div>
 				<div class="form-group" x-show-errors>
-					<label class="control-label" for="shortDesc">Project Description</label>
+					<label class="control-label" for="shortDesc">Project Description<em class="required">(Required)</em></label>
 					<textarea ui-tinymce rows="5" title="Project Description" id="shortDesc" name="projectdesc" rows="3"
 						ng-model="project.description" required></textarea>
 				</div>
 				<div class="row">
 					<div class="col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="region">Region</label>
+						<label class="control-label" for="region">Region<em class="required">(Required)</em></label>
 						<select class="form-control" if="region" id="region" name="region"
 						 	ng-model='project.region'
 							ng-options="key as value for (key, value) in regions" required></select>
@@ -90,7 +92,7 @@
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="location">Location Description</label>
+						<label class="control-label" for="location">Location Description<em class="required">(Required)</em></label>
 						<input class="form-control" id="location" type="text" name="location"
 							ng-model="project.location" required>
 					</div>
@@ -244,17 +246,17 @@
 				<legend>Executive Project Director</legend>
 				<div class="row">
 					<div class="col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="projectdirector">Name</label>
+						<label class="control-label" for="projectdirector">Name<em class="required">(Required)</em></label>
 						<input class="form-control" name="projectdirector" id="projectdirector"
 							ng-model="project.responsibleEPD" required />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="projectdirectormmail">Email</label>
+						<label class="control-label" for="projectdirectormmail">Email<em class="required">(Required)</em></label>
 						<input class="form-control" placeholder="example@domain.com" name="projectdirectormmail" id="projectdirectormmail"
 							ng-model="project.responsibleEPDEmail" required />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="projectdirectorphone">Phone</label>
+						<label class="control-label" for="projectdirectorphone">Phone<em class="required">(Required)</em></label>
 						<input class="form-control" placeholder="e.g. (555) 555-5555" name="projectdirectorphone" id="projectdirectorphone"
 							ng-model="project.responsibleEPDPhone" required />
 					</div>
@@ -264,17 +266,17 @@
 				<legend>Project Lead</legend>
 				<div class="row">
 					<div class="col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="projectleadname">Name</label>
+						<label class="control-label" for="projectleadname">Name<em class="required">(Required)</em></label>
 						<input class="form-control" name="projectleadname" id="projectleadname"
 							ng-model="project.projectLead" required />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="projectleademail">Email</label>
+						<label class="control-label" for="projectleademail">Email<em class="required">(Required)</em></label>
 						<input class="form-control" placeholder="example@domain.com" name="projectleademail" id="projectleademail"
 							ng-model="project.projectLeadEmail" required />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="projectleadphone">Phone</label>
+						<label class="control-label" for="projectleadphone">Phone<em class="required">(Required)</em></label>
 						<input class="form-control" placeholder="e.g. (555) 555-5555" name="projectleadphone" id="projectleadphone"
 							ng-model="project.projectLeadPhone" required />
 					</div>
@@ -284,17 +286,17 @@
 				<legend>Compliance and Enforcement Lead</legend>
 				<div class="row">
 					<div class="col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="celead">Name</label>
+						<label class="control-label" for="celead">Name<em class="required">(Required)</em></label>
 						<input class="form-control" name="celead" id="celead"
 							ng-model="project.CELead" required />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
-						<label class="control-label" for="celeademail">Email</label>
+						<label class="control-label" for="celeademail">Email<em class="required">(Required)</em></label>
 						<input class="form-control" placeholder="example@domain.com" name="celeademail" id="celeademail"
 							ng-model="project.CELeadEmail" required />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
-						<label class="control-label">Phone</label>
+						<label class="control-label">Phone<em class="required">(Required)</em></label>
 						<input class="form-control" placeholder="e.g. (555) 555-5555" name="cephone"
 							ng-model="project.CELeadPhone" required />
 					</div>
