--- a/modules/project-irs/client/views/ir-list.html
+++ b/modules/project-irs/client/views/ir-list.html
@@ -18,10 +18,10 @@
 
 		<section class="panel panel-default">
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-hover table-striped">
-				<tr ng-repeat="o in $data" ui-sref="p.ir.detail({irId:o._id})" class="clickable">
+				<tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
 					<td data-title="'Name'"    sortable="'name'"    filter="{'name':'text'}"	>{{o.name}}</td>
 					<td class="actions-col action-x1" header-class="'actions-col actions-x1'">
-						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.ir.edit({irId:o._id})">
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.artifact.edit({artifactId:o._id})">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 						<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="o"></tmpl-permissions-gear>
