ESM-466, ESM-453: rename notification(s) to communication(s).  Client facing will use the term Updates.

--- a/modules/communications/client/views/communication-list.html
+++ b/modules/communications/client/views/communication-list.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container">
-  <h1><span ng-show="project.name">Notifications</h1>
+  <h1><span ng-show="project.name">Communications / Updates</h1>
 </div>
 
 <div class="view-body-container">
