Change artifacts to return to view mode instead of detail page.

--- a/modules/artifacts/client/views/artifact-comment.html
+++ b/modules/artifacts/client/views/artifact-comment.html
@@ -3,7 +3,7 @@
 </h1>
 
 <div class="text-right">
-	<a class="btn btn-link btn-xs" ui-sref="p.detail">Cancel</a>
+	<a class="btn btn-link btn-xs" ui-sref="p.artifact.view">Cancel</a>
 </div>
 
 <!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
