--- a/modules/artifacts/client/views/artifact-executive.html
+++ b/modules/artifacts/client/views/artifact-executive.html
@@ -2,7 +2,7 @@
 <div class="view-title-container flex-row">
 	<h1>{{artifact.name}} ({{artifact.version}})</h1>
 	<div class="actions">
-		<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.detail">Cancel</a>
+		<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.artifact.view">Cancel</a>
 		<a class="btn btn-danger btn-sm" title="Reject and return for {{buttons.prev}}" ng-click="reject()">Reject</a>
 		<a class="btn btn-success btn-sm" title="Approve for {{buttons.next}}" ng-click="submit()">Approve for {{buttons.next}}</a>	
 	</div>
