--- a/modules/communications/client/views/communication-list.html
+++ b/modules/communications/client/views/communication-list.html
@@ -1,9 +1,36 @@
-
-<div class="view-title-container">
-  <h1><span ng-show="project.name">Communications / Updates</h1>
-</div>
-
 <div class="view-body-container">
-  Hi.
+  <div class="button-bar clearfix">
+    <div class="pull-left">
+      <button ng-if="true || project.userCan.createProjectUpdate" class="btn btn-default btn-sm" ui-sref="p.communication.list" ng-click="openAddCommunication()">
+        <span class="glyphicon glyphicon-plus"></span><span>Add Project Update</span>
+      </button>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <table ng-table="tableParams" show-filter="true" class="table table-hover vc-table">
+      <tr ng-repeat="o in $data" ui-sref="p.communication.detail({notificationId:o._id})">
+        <td data-title="'Name'"
+            filter="{'name':'text'}"
+            sortable="'name'">
+          <a ui-sref="p.communication.detail({notificationId:o._id})">{{o.name}}</a>
+        </td>
+        <td data-title="'Type'"
+            filter="{'type':'text'}"
+            sortable="'type'" >{{o.type}}</td>
+        <td class="actions-col action-x2" header-class="'actions-col action-x2'">
+          <a class="btn btn-default btn-sm" title="Edit Valued Component"
+             ng-if="true ||project.userCan.createProjectUpdate"
+             ng-click="$event.stopPropagation()"
+             ui-sref="p.communication.edit({notificationId:o._id})">
+            <span class="glyphicon glyphicon-pencil"></span>
+          </a>
+        </td>
+      </tr>
+      <tr class="no-records" ng-if="!$data || $data.length === 0">
+        <td colspan="2">
+          No records found.
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
-
