--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -18,16 +18,16 @@
 				<td class="artifact-name-col" header-class="'artifact-name-col'" data-title="'Name'" filter="{'name':'text'}" sortable="'name'">
 					{{o.name}}
 				</td>
-				<td data-title="'Version'" filter="{'version':'select'}" filter-data="s.versionArray" class="text-center" sortable="'version'">
+				<td data-title="'Version'" filter="{'version':'select'}" filter-data="s.versionArray" sortable="'version'">
 					{{o.version}}
 				</td>
-				<td ng-if="!published" data-title="'Stage'" filter="{'stage':'select'}" filter-data="s.stageArray" class="text-center" sortable="'stage'">
+				<td ng-if="!published" data-title="'Stage'" filter="{'stage':'select'}" filter-data="s.stageArray" sortable="'stage'">
 					{{o.stage}}
 				</td>
-				<td data-title="'Last Update'" filter-data="'dateUpdated'" class="text-center" sortable="'dateUpdated'">
+				<td data-title="'Last Update'" filter-data="'dateUpdated'" sortable="'dateUpdated'">
 					{{ o.dateUpdated | amDateFormat:'MMM DD, YYYY' }}
 				</td>
-				<td ng-if="!published" data-title="'Updated By'" class="text-center" filter="{'updatedBy.username':'text'}" sortable="'updatedBy.username'">
+				<td ng-if="!published" data-title="'Updated By'" filter="{'updatedBy.username':'text'}" sortable="'updatedBy.username'">
 					{{o.updatedBy.username}}
 				</td>
 				<td class="actions-col action-x2" header-class="'actions-col action-x2'">
