--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -33,10 +33,12 @@
 			</div>
 		</div>
 	</div><!-- / DETAILS -->
-	<tmpl-artifact-display
-		x-mode="'edit'"
-		x-artifact="ir.artifact"
-		x-project="project"></tmpl-artifact-display>
+	<a class="btn btn-default btn-sm" title="Edit Inspection Report Template"
+		ng-if="project.userCan.createInspectionReport" 
+		ng-click="$event.stopPropagation()" 
+		ui-sref="p.artifact.edit({artifactId:ir.artifact._id})">
+		<span class="glyphicon glyphicon-pencil"></span>
+	</a>
 
 	<div class="form-footer no-border clearfix">
 		<a class="back-btn btn btn-link pull-left" ui-sref="p.ir.list"><span class="glyphicon glyphicon-chevron-left"></span>Back to Inspection Reports</a>
