--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -19,7 +19,7 @@
 		<button class="btn btn-default btn-sm" ng-if="s.showTopicCloud === false"
 			data-toggle="modal"
 			data-target="#commentModal"
-			data-backdrop="false">Count by Topic</button>
+			data-backdrop="false">Count by Valued Component</button>
 		<button class="btn btn-default btn-sm" ng-if="authentication.user"
 			ng-click="s.downloadCommentData()"><span class="glyphicon glyphicon-download-alt"></span><span>Download CSV</span></button>
 	</div>
