--- a/modules/templates/client/views/template-edit.html
+++ b/modules/templates/client/views/template-edit.html
@@ -159,6 +159,13 @@
 			</div>
 
 		</div>
+
+		<div class="form-footer clearfix">
+			<div class="pull-right">
+				<a class="btn btn-default btn-sm" ui-sref="admin.template.list">Cancel</a>
+				<a class="btn btn-primary btn-sm" href ng-click="save()">Save</a>
+			</div>
+		</div>
 	</div><!-- / VIEW BODY CONTAINER -->
 
 </div>
