--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -22,7 +22,7 @@
     </ul>
 
     <div class="tab-pane active" ng-show="form.curTab === 'Update Details'" ng-form="projectUpdateDetailsForm">
-        
+
         <div class="form-group">
             <label class="control-label">Name<em class="required">(Required)</em></label>
             <input class="form-control"></input>
@@ -56,16 +56,17 @@
         <fieldset>
             <legend>Configure Email</legend>
             <div class="form-group">
-                <button class="btn btn-default btn-sm">Use Existing Template</button>
+                <button class="btn btn-default btn-sm" x-email-template-chooser x-project="project" x-current="s.communication.emailTemplate">Use Existing Template</button>
+
             </div>
             <div class="form-group">
                 <label class="control-label">Subject<em class="required">(Required)</em></label>
-                <input class="form-control"></input>
+                <input class="form-control" ng-model="s.communication.emailTemplate.subject"></input>
             </div>
             <div class="form-group">
                 <label class="control-label">Message<em class="required">(Required)</em></label>
                 <textarea ui-tinymce="tinymceOptions" type="text"
-                    ng-model="curVal"
+                    ng-model="s.communication.emailTemplate.content"
                     ng-blur="activeItem = false">
                 </textarea>
             </div>
@@ -82,28 +83,28 @@
                 ng-table="tableParams"
                 show-filter="false">
                 <tr>
-                    <td class="name-col" 
+                    <td class="name-col"
                         header-class="'name-col'"
-                        data-title="'Name'" 
-                        filter="{'name':'text'}" 
+                        data-title="'Name'"
+                        filter="{'name':'text'}"
                         sortable="'name'">Recipient Name
                     </td>
-                    <td class="email-col" 
+                    <td class="email-col"
                         header-class="'email-col'"
-                        data-title="'Email'" 
-                        filter="{'name':'text'}" 
+                        data-title="'Email'"
+                        filter="{'name':'text'}"
                         sortable="'name'">recipient@email.com
                     </td>
-                    <td class="org-col" 
+                    <td class="org-col"
                         header-class="'org-col'"
-                        data-title="'Organization'" 
-                        filter="{'name':'text'}" 
+                        data-title="'Organization'"
+                        filter="{'name':'text'}"
                         sortable="'name'">Organization
                     </td>
-                    <td class="type-col" 
+                    <td class="type-col"
                         header-class="'type-col'"
-                        data-title="'Type'" 
-                        filter="{'name':'select'}" 
+                        data-title="'Type'"
+                        filter="{'name':'select'}"
                         sortable="'name'">Type
                     </td>
                     <td class="actions-col action-x1" header-class="'actions-col action-x1'"
@@ -114,31 +115,31 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="name-col" 
+                    <td class="name-col"
                         header-class="'name-col'"
-                        data-title="'Name'" 
-                        filter="{'name':'text'}" 
+                        data-title="'Name'"
+                        filter="{'name':'text'}"
                         sortable="'name'">Recipient Name
                     </td>
-                    <td class="email-col" 
+                    <td class="email-col"
                         header-class="'email-col'"
-                        data-title="'Email'" 
-                        filter="{'name':'text'}" 
+                        data-title="'Email'"
+                        filter="{'name':'text'}"
                         sortable="'name'">recipient@email.com
                     </td>
-                    <td class="org-col" 
+                    <td class="org-col"
                         header-class="'org-col'"
-                        data-title="'Organization'" 
-                        filter="{'name':'text'}" 
+                        data-title="'Organization'"
+                        filter="{'name':'text'}"
                         sortable="'name'">Organization
                     </td>
-                    <td class="type-col" 
+                    <td class="type-col"
                         header-class="'type-col'"
-                        data-title="'Type'" 
-                        filter="{'name':'select'}" 
+                        data-title="'Type'"
+                        filter="{'name':'select'}"
                         sortable="'name'">Type
                     </td>
-                    <td class="actions-col action-x1" 
+                    <td class="actions-col action-x1"
                         header-class="'actions-col action-x1'">
                         <button class="btn btn-default btn-sm">
                             <span class="glyphicon glyphicon-remove"></span>
