--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -48,7 +48,7 @@ $btn-primary-bg:			#1a5a96;
 $header-focus-border-color: #5475a7;
 
 /* Left Panel */
-$left-panel-width: 			20rem;
+$left-panel-width: 			19rem;
 $left-panel-bg:				#FFF;
 $left-panel-shadow-width:	0.4rem;
 $left-panel-shadow-color:	#999;
@@ -67,7 +67,7 @@ $panel-footer-bg: 			#FFF;
 /* Side Navigation */
 $sidenav-bg: 				#FFF;
 $sidenav-color: 			$link-color;
-$sidenav-width:				18rem;
+$sidenav-width:				19rem;
 
 /* Tables */
 $table-bg: 					#FFF;
@@ -1565,16 +1565,16 @@ ui-view {
 
 /* PAGE (VIEW) CONTAINERS
 ------------------------------ */
-.view-title-container,
 .view-body-container,
 .view-footer-container {
 	padding: 2rem;
 }
 
 .view-title-container {
-	height: 7rem;
+	height: 6.2rem;
+	padding: 1.5rem 2rem;
 	background: #FFF;
-	border-bottom: 1px solid #EEE;
+	border-bottom: 1px solid #DDD;
 	min-width: 0;
 
     h1 {
@@ -2152,8 +2152,8 @@ $sidenav-text-shadow: 0 0 2px #FFF;
 		position: relative;
 		display: table-cell;
 		width: $sidenav-width;
-		height: 7rem;
-		padding: 1rem 1.5rem 1rem 4.5rem;
+		height: 6.2rem;
+		padding: 0.9rem 1.5rem 0.9rem 4.5rem;
 		font-weight: bold;
 		color: #1a5a96;
 		text-decoration: none;
@@ -2163,7 +2163,7 @@ $sidenav-text-shadow: 0 0 2px #FFF;
 
 		.glyphicon {
 			position: absolute;
-			top: 2rem;
+			top: 1.7rem;
 			left: 1.2rem;
 			font-size: 2.4rem;
 		}
