Adding ability to visualize added artifacts to IRs.  Fixing scope issues, updating UI.

--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -30,6 +30,7 @@
 	<div>
 		<tmpl-artifact-display
 			x-mode="'view'"
+			ng-if="ir.artifact.name"
 			x-artifact="ir.artifact"
 			x-project="project"></tmpl-artifact-display>
 	</div>
