--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -40,7 +40,7 @@
 			<label for="subComponents" class="control-label">Associated Content</label>
 			<ul class="anchor-list" ng-if="ir.conditionArtifacts.length > 0">
 				<li ng-repeat="o in ir.conditionArtifacts">
-					<a ui-sref="p.artifact.detail({artifactId:o._id})">{{o.name}}</a>
+					<a ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</a>
 				</li>
 			</ul>
 			<button ng-if="project.userCan.createInspectionReport"
