--- a/modules/email-templates/client/views/email-template-chooser.html
+++ b/modules/email-templates/client/views/email-template-chooser.html
@@ -1,14 +1,26 @@
+
 <div class="modal-header">
-  <h3 class="modal-title">Email Templates</h3>
+	<h3 class="modal-title">Email Templates</h3>
 </div>
+
 <div class="modal-body">
-  <ul class="list-group check-list">
-    <li class="list-group-item" ng-repeat="t in s.templates" ng-click="s.select(t._id)">
-      <input type="checkbox" ng-checked="s.isSelected(t._id)"></input>{{ t.name }} ({{ t.group }})
-    </li>
-  </ul>
+	<section class="panel panel-default no-margin">
+		<table class="table table-scroll add-vc-table" ng-table="tableParams" show-filter="false">
+			<tr ng-repeat="t in s.templates">
+				<td class="name-col" 
+					header-class="'name-col'"
+				 	data-title="'Name'">
+					<input type="checkbox" ng-click="s.select(t._id)" ng-checked="s.isSelected(t._id)"/>{{ t.name }}</td>
+				<td data-title="'Group'">{{t.group}}</td>
+				<tr ng-show="!s.templates" class="text-center">
+					<td colspan="3">No Topics found.</td>
+				</tr>					
+			</tr>
+		</table>
+	</section>
 </div>
+
 <div class="modal-footer">
-  <button class="btn btn-default" ng-click="s.cancel()">Cancel</button>
-  <button class="btn btn-primary" ng-disabled="!(s.selected && s.selected.length > 0)" ng-click="s.ok()">OK</span></button>
+	<button class="btn btn-default" ng-click="s.cancel()">Cancel</button>
+	<button class="btn btn-primary" ng-disabled="!(s.selected && s.selected.length > 0)" ng-click="s.ok()">OK</span></button>
 </div>
