--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -21,14 +21,15 @@
 		<div class="panel-body ir-details-panel-body">
 			<div class="row">
 				<div class="col-sm-6 col-lg-3 detail-row">
-					<label>Title</label>
+					<label>Name: </label>
+					<span class="value">{{ ::ir.name }}</span>
 				</div>
 
 			</div>
 		</div>
 	</div><!-- / DETAILS -->
 	<div>
-		<a class="btn btn-default btn-sm" title="Show Inspection Report Template"
+		<a class="btn btn-default btn-sm" title="Go To Inspection Record"
 		ng-click="$event.stopPropagation()"
 		ui-sref="p.artifact.view({artifactId:ir.artifact._id})">Go To Inspection Record &nbsp;
 		<span class="glyphicon glyphicon-share-alt"></span>
